# codex2api

./: .gitignore  README.md  deploy-systemd.sh
.github/workflows/: desktop-windows.yml
admin/: handler.go
auth/: store.go
database/: postgres.go  sqlite.go
desktop/: app.js  index.html  styles.css
docs/: DESKTOP_WINDOWS.md
frontend/src/: types.ts
frontend/src/components/: AccountUsageModal.tsx  StatusBadge.tsx
frontend/src/locales/: en.json  zh.json
frontend/src/pages/: Accounts.tsx  Usage.tsx
scripts/: build-codex2api-desktop.ps1  build-codex2api-sidecar.ps1  package-desktop-portable.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
